<resources>
    <string name="app_name">MonsterMaster</string>
    <string name="temp">temp</string>
    <string name="portraitContentDescription">Portrait of the character that is speaking</string>
    <string name="scene1item1">You awaken in darkness</string>
    <string name="scene1item2">With no memory or direction</string>
    <string name="scene1item3">Time passes</string>
    <string name="scene1item4">You cannot grasp it</string>
    <string name="scene1item5">A week, a month, a year</string>
    <string name="scene1item6">Arises and fades</string>
    <string name="scene1item7">Then there is light</string>
    <string name="scene1choice1">Go towards the Light</string>
    <string name="scene1choice2">Embrace the Darkness</string>
    <string name="scene2item1">Light comes from above</string>
    <string name="scene2item2">Revealing a dark forest</string>
    <string name="scene2item3">Trees reach to heaven</string>
    <string name="scene2item4">Silhouetted by the stars</string>
    <string name="scene2item5">Quiet echoes in the night</string>
    <string name="scene2choice1">Gather Twigs for Fire</string>
    <string name="scene2choice2">Search for Water</string>
    <string name="scene3item1">Darkness comforts you</string>
    <string name="scene3item2">Obscures your form</string>
    <string name="scene3item3">Harsh light Fades</string>
    <string name="scene3item4">Tall Trees surround you</string>
    <string name="scene3item5">Sharp blades of grass</string>
    <string name="scene3item6">Are Consumed by Shadow</string>
    <string name="scene3choice1">Gather Twigs for Fire</string>
    <string name="scene3choice2">Search for Water</string>
    <string name="scene4item1">The flame comforts you</string>
    <string name="scene4item2">Reveals a stream</string>
    <string name="scene4item3">Thirst quenched</string>
    <string name="scene4item4">You are safe</string>
    <string name="scene4item5">What next?</string>
    <string name="scene4choice1">Stay</string>
    <string name="scene4choice2">Search for Others</string>
    <string name="scene5item1">A stream greets you</string>
    <string name="scene5item2">Glistening in the light</string>
    <string name="scene5item3">Deep draughts bring joy</string>
    <string name="scene5item4">Comfort and peace</string>
    <string name="scene5item5">You are safe</string>
    <string name="scene5item6">What next?</string>
    <string name="scene5choice1">Stay</string>
    <string name="scene5choice2">Search for Others</string>
    <string name="scene6item1">The fire consumes</string>
    <string name="scene6item2">Guards from the devils</string>
    <string name="scene6item3">In the outer dark</string>
    <string name="scene6item4">You are safe</string>
    <string name="scene6item5">For now</string>
    <string name="scene6choice1">Stay</string>
    <string name="scene6choice2">Search for Others</string>
    <string name="scene7item1">Stream quivers in moonlight</string>
    <string name="scene7item2">Ancient and deep</string>
    <string name="scene7item3">Thirst quenched</string>
    <string name="scene7item4">You are safe</string>
    <string name="scene7item5">What next?</string>
    <string name="scene7choice1">Stay</string>
    <string name="scene7choice2">Search for Others</string>
    <string name="scene8item1">Sun Shines down</string>
    <string name="scene8item2">Warmth embraces your skin</string>
    <string name="scene8item3">Reveals a lost shrine</string>
    <string name="scene8item4">Wooden idols</string>
    <string name="scene8item5">Reach to the Heavens</string>
    <string name="scene8item6">Calling to you</string>
    <string name="scene8choice1">Pray at Shrine</string>
    <string name="scene8choice2">Burn the Shrine</string>
    <string name="scene8choice3">Look for Food</string>
    <string name="scene8choice3Alt">Look for Worshippers</string>
    <string name="scene8choice4">Praise the Sun!</string>
    <string name="scene9item1">A glyph appears</string>
    <string name="scene9item2">Faintly glowing</string>
    <string name="scene9item3">Edges Dripping with Light</string>
    <string name="scene9item4">What unknown secrets</string>
    <string name="scene9item5">Does it hide?</string>
    <string name="scene9choice1">Pray to attune</string>
    <string name="scene9choice2">Study Glyph</string>
    <string name="scene9choice3">Look for food</string>
    <string name="scene9choice3Alt">Look for people</string>
    <string name="scene9choice4">Recognize moon phases</string>
    <string name="scene10item1">In the Distance</string>
    <string name="scene10item2">A small Demon</string>
    <string name="scene10item3">Caught in a trap</string>
    <string name="scene10item4">An innocent bird</string>
    <string name="scene10item4Alt">A small critter</string>
    <string name="scene10item5">In it its mouth</string>
    <string name="scene10item6">Both in Pain</string>
    <string name="scene10choice1">Free the demon</string>
    <string name="scene10choice2">Save the bird</string>
    <string name="scene10choice2Alt">Save the critter</string>
    <string name="scene10choice3">Kill Demon, Eat Bird</string>
    <string name="scene10choice3Alt">Kill Demon, Eat Critter</string>
    <string name="scene10choice4">Leave them Both</string>
    <string name="scene11item1">The Stream\'s depths</string>
    <string name="scene11item2">Hidden in Twilight</string>
    <string name="scene11item3">Pool at your feet</string>
    <string name="scene11item4">Gaze at the bottom</string>
    <string name="scene11item5">Glowing Strangely</string>
    <string name="scene11item6">With Hidden Wonder</string>
    <string name="scene11choice1">Drink Deeply</string>
    <string name="scene11choice2">Dive in</string>
    <string name="scene11choice3">Search for Food</string>
    <string name="scene11choice3Alt">Search for Others</string>
    <string name="scene11choice4">Wait in Darkness</string>
    <string name="scene12var1item1">A heavenly being</string>
    <string name="scene12var1item2">Made of pure light</string>
    <string name="scene12var1item3">Floats down</string>
    <string name="scene12var1item4">Calls to you</string>
    <string name="scene12var1item5">What name does it call?</string>
    <string name="scene12var2item1">The heat of the flame</string>
    <string name="scene12var2item2">Is a sentient being</string>
    <string name="scene12var2item3">Its hot soul</string>
    <string name="scene12var2item4">Calls to you</string>
    <string name="scene12var2item5">What name does it call?</string>
    <string name="scene12var3item1">You find a green onion</string>
    <string name="scene12var3item2">But when plucked</string>
    <string name="scene12var3item3">A surprised puppy revealed</string>
    <string name="scene12var3item4">It licks you</string>
    <string name="scene12var3item5">And barks your name</string>
    <string name="scene12var3item6">What name does it call?</string>
    <string name="scene12var4item1">The Birds tweet</string>
    <string name="scene12var4item2">As you approach</string>
    <string name="scene12var4item3">One flies to you</string>
    <string name="scene12var4item4">Perches happily</string>
    <string name="scene12var4item5">on your shoulder</string>
    <string name="scene12var4item6">It calls to you joyfully</string>
    <string name="scene12var4item7">What name does it call?</string>
    <string name="scene12var5item1">The sun shines down</string>
    <string name="scene12var5item2">A loyal servant</string>
    <string name="scene12var5item3">Rides its beams</string>
    <string name="scene12var5item4">Bows and Calls to you</string>
    <string name="scene12var5item5">What name does it call?</string>
    <string name="scene12var6item1">The glyph reforms itself</string>
    <string name="scene12var6item2">Into a being of light</string>
    <string name="scene12var6item3">It bows to you</string>
    <string name="scene12var6item4">And calls to you dutifully</string>
    <string name="scene12var6item5">What name does it call?</string>
    <string name="scene12var7item1">The glyph recognizes your wisdom</string>
    <string name="scene12var7item2">Rains come</string>
    <string name="scene12var7item3">Together they form a fish</string>
    <string name="scene12var7item4">Staring at you</string>
    <string name="scene12var7item5">Matching wit for wit</string>
    <string name="scene12var7item6">What name does it call?</string>
    <string name="scene12var8item1">You find a green onion</string>
    <string name="scene12var8item2">But when plucked</string>
    <string name="scene12var8item3">Its a surprised puppy</string>
    <string name="scene12var8item4">It licks you</string>
    <string name="scene12var8item5">and barks your name</string>
    <string name="scene12var8item6">What name does it back?</string>
    <string name="scene12var9item1">The Birds tweet</string>
    <string name="scene12var9item2">As you approach</string>
    <string name="scene12var9item3">One flies to you</string>
    <string name="scene12var9item4">Perched happily</string>
    <string name="scene12var9item5">on your shoulder</string>
    <string name="scene12var9item6">It sings to you joyfully</string>
    <string name="scene12var9item7">What name does it call?</string>
    <string name="scene12var10item1">The Glyph shines</string>
    <string name="scene12var10item2">In blue moonlight</string>
    <string name="scene12var10item3">Forms a smiling creature</string>
    <string name="scene12var10item4">Reaches out</string>
    <string name="scene12var10item5">Calling to you sweetly</string>
    <string name="scene12var10item6">What name does it call?</string>
    <string name="scene12var11item1">The little demon smiles</string>
    <string name="scene12var11item2">Sharing its snack with you</string>
    <string name="scene12var11item3">You bond over the meal</string>
    <string name="scene12var11item4">It calls to you strangely</string>
    <string name="scene12var11item5">What name does it call?</string>
    <string name="background_content_description">The absolute background behind everything else</string>
    <string name="background_top_content_description">The relative \'top\' third(ish) of the display, typically used to prompt the player</string>
    <string name="background_center_content_description">The relative \'center\' of the display, typically used to set an image for the scene for the user</string>
    <string name="background_bottom_content_description">The relative \'bottom\' of the display, typically used to get input from the user</string>
    <string name="cinematic_text_1_content_description">The first TextView shown when cinematically showing text, should be aligned to the top of the screen, usually set to invisible. The cinematic text will be aligned in approximately the top two thirds of the screen, from the top of the parent (and background top) to the bottom of background_center</string>
    <string name="cinematic_text_2_content_description">The second TextView shown when cinematically showing text, usually set to invisible</string>
    <string name="cinematic_text_3_content_description">The third TextView shown when cinematically showing text, usually set to invisible</string>
    <string name="cinematic_text_4_content_description">The fourth TextView shown when cinematically showing text, usually set to invisible</string>
    <string name="cinematic_text_5_content_description">The fifth TextView shown when cinematically displaying text, usually set to invisible</string>
    <string name="cinematic_text_6_content_description">The sixth TextView shown when cinematically displaying text, usually set to invisible</string>
    <string name="cinematic_text_7_content_description">The last Text View displayed when cinematically displaying text, usually set to invisible, aligned to right above the bottom 3rd of the screen</string>
</resources>