<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:rotation="0"
    android:rotationX="0"
    android:rotationY="0"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_black" />

    <ImageView
        android:id="@+id/background_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_top_content_description"
        app:layout_constraintBottom_toTopOf="@+id/background_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_1080x528" />

    <ImageView
        android:id="@+id/background_center"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:contentDescription="@string/background_center_content_description"
        app:layout_constraintBottom_toTopOf="@+id/background_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_top"
        app:srcCompat="@drawable/background_1080x864" />

    <ImageView
        android:id="@+id/background_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_bottom_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_center"
        app:srcCompat="@drawable/background_1080x528" />

    <TextView
        android:id="@+id/cinematic_text_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_1_content_description"
        android:gravity="center"
        android:text="@string/scene1item1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_2"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toTopOf="@id/background_top" />

    <TextView
        android:id="@+id/cinematic_text_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_2_content_description"
        android:gravity="center"
        android:text="@string/scene1item2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_3"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_1" />

    <TextView
        android:id="@+id/cinematic_text_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_3_content_description"
        android:gravity="center"
        android:text="@string/scene1item3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_4"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_2" />

    <TextView
        android:id="@+id/cinematic_text_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_4_content_description"
        android:gravity="center"
        android:text="@string/scene1item4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_5"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_3" />

    <TextView
        android:id="@+id/cinematic_text_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_5_content_description"
        android:gravity="center"
        android:text="@string/scene1item5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_6"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_4" />

    <TextView
        android:id="@+id/cinematic_text_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_6_content_description"
        android:gravity="center"
        android:text="@string/scene1item6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cinematic_text_7"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_5" />

    <TextView
        android:id="@+id/cinematic_text_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cinematic_text_7_content_description"
        android:gravity="center"
        android:text="@string/scene1item7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/background_bottom"
        app:layout_constraintEnd_toEndOf="@id/background_top"
        app:layout_constraintStart_toStartOf="@id/background_top"
        app:layout_constraintTop_toBottomOf="@id/cinematic_text_6" />
</androidx.constraintlayout.widget.ConstraintLayout>